feat:Version 1.2 优化桌面端性能，完善加密密钥、崩溃恢复等功能，增强编辑器编辑体验